<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/menuItems"
    android:id="@+id/fragments">

    <fragment
        android:id="@+id/menuItems"
        android:name="hr.algebra.nasa.ItemsFragment"
        android:label="@string/items"
        tools:layout="@layout/fragment_items"/>

    <fragment
        android:id="@+id/menuAbout"
        android:name="hr.algebra.nasa.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>

    <fragment
        android:id="@+id/menuUniverse"
        android:name="hr.algebra.nasa.UniverseFragment"
        android:label="@string/Universe"
        tools:layout="@layout/fragment_universe"/>

    <fragment
        android:id="@+id/menuDeveloper"
        android:name="hr.algebra.nasa.DeveloperFragment"
        android:label="@string/Developer"
        tools:layout="@layout/fragment_developer"/>

    <fragment
        android:id="@+id/menuInstitution"
        android:name="hr.algebra.nasa.InstitutionFragment"
        android:label="@string/Institution"
        tools:layout="@layout/fragment_institution"/>

</navigation>